cmake_minimum_required(VERSION 3.16)
project(CXX_Learn)

set(CMAKE_CXX_STANDARD 14)

add_executable(solve_eq ./solve_eq.cpp)
add_executable(base_classes ./base_classes.cpp)
add_executable(d1_array ./d1_array.cpp)
add_executable(double_matrix ./double_matrix.cpp)
add_executable(decimal_string ./Lab5/main.cpp ./Lab5/BaseString.cpp)